<resources>
    <string name="app_name">nokhbaHMD</string>
    <string name="title_slpashScreen">نخبة حاسي مسعود</string>
    <string name="btn_start">سجل من هنا</string>
    <string name="first_slide_title">مرحبا</string>
    <string name="second_slide_title">غسل اليدين</string>
    <string name="third_slide_title">إرتداء القناع الواقي</string>
    <string name="forth_slide_title">نخبة حاسي مسعود</string>
    <string name="first_desc">
 بمشاركة الجميع يمكنا السيطرة على فيروس كورونا ومنع انتشاره لتعود الحياة إلى طبيعتها كما كانت من قبل
    </string>
    <string name="secound_desc">
نحثكم على غسل اليدين بشكل دوري و إستعمال الغسول الهيدروكحولي في حالة عدم توفر الصابون، حافظوا على النظافة الشخصية والعامة    </string>
    <string name="third_desc">
      إرتداء القناع الواقي يساهم بشكل فعّال في حمايتكم من الإصابة بالعدوى و يحد من إنتشار الفيروس في الأوساط و المجتمعات
   </string>
    <string name="forth_desc">نخبة حاسي مسعود تحثكم على البقاء في المنزل،
اذا كنتم بحاجة للمساعدة في شراء حاجيات البيت، الدواء أو استشارة الطبيب، نحن في خدمتكم طوال فترة الحجر الصحي.
   </string>
    <string name="rol">قواعد الوقاية والتباعد الاجتماعي</string>
    <string name="help">طلب مساعدة</string>
    <string name="help5">اذا كنت مصاب بعدوى كووفيد 19 ومطبق للحجر المنزلي يمكنك طلب خدمة شراء حاجيات البيت</string>
    <string name="help2">تقديم المساعدة</string>
    <string name="help3">إستعجالات</string>
    <string name="help4">من نحن</string>
    <string name="help6">اشعارات</string>
    <string name="help7">دعوة صديق</string>
    <string name="helpScreen">استمارة طلب المساعدة</string>
    <string name="fname">الإسم</string>
    <string name="lname">اللقب</string>
    <string name="phone_number">رقم الهاتف</string>
    <string name="sick">هل انت مصاب بفيروس كورونا ؟</string>
    <string name="sick2">أحد افراد عائلتك مصاب ؟</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="dr1">استشارة طبيب نفسي</string>
    <string name="dr">استشارة طبيب</string>
    <string name="other">إقتناء حاجيات البيت او خدمة اخرى</string>
    <string name="countsick">عدد المصابين</string>
    <string name="type">نوع الخدمة</string>
    <string name="send">أرسل</string>
    <string name="volunter_screen">استمارة تقديم المساعدة (تطوع)</string>
    <string name="volunter_title">يمكنك المساهمة في تقديم المساعدة عن طريق ملأ الاستمارة</string>
    <string name="volunter_type">نوع التطوع ؟</string>
    <string name="volunter_dr">طبيب نفسي متطوع</string>
    <string name="volunter_dr1">طبيب متطوع</string>
    <string name="volunter_simple">متطوع عادي</string>
    <string name="volunter_money">تبرعات مالية</string>
    <string name="stay_home">ابقى في المنزل ، احمي نفسك ، احمي عائلتك واحمي المجتمع من حولك</string>
    <string name="phone_covid">هاتف مصلحة الكوفيد بمستشفى حاسي مسعود</string>
    <string name="call_now">اتصل الآن </string>
    <string name="phone_covid_number">14</string>
    <string name="mssg_localisation">يحتاج هذا التطبيق الى خدمة تحديد المواقع حتى يعمل بشكل أفضل</string>
    <string name="champ">أحد الحقول فارغ ، يرجى التحقق من جميع الحقول</string>
    <string name="prenomformat"> الاسم غير صحيح</string>
    <string name="nomformat">اللقب غير صحيح</string>
    <string name="phoneformat">رقم الهاتف غير صحيح</string>
    <string name="serviceType">يرجى تحديد نوع الخدمة</string>
    <string name="errorMssg">حدث خطأ يرجى المحاولة مرة أخرى</string>
    <string name="dev_info">معلومات عن المطور </string>
    <string name="about_us">من نحن</string>
    <string name="checkConx">يرجى التحقق من اتصال الإنترنت الخاص بك من فضلك</string>
    <string name="nokhba_desc">تم تأسيس نخبة حاسي مسعود ضد الكورونا يوم 20 مارس 2020.\n
هي من مجموعة من خيرة شباب حاسي مسعود الذين اختاروا العمل التطوعي للمساهمة بأفكارهم و مشاريعهم لمحاربة الوباء، لا تنتمي نخبة
        حاسي مسعود لأي طابع جمعوي أو
        مؤسساتي، و لها طابع مستقل ينبثق من دعم شبابها المتطوع.</string>
    <string name="nokhba_desc2">النخبة كانت مرتكزة على متطوعين في شتى المجالات، بالأخص في الجانب البيولوجي والإكتروني والإعلامي، من أهم ما قدمته النخبة هو:\n
* صنع المعقمات وتوزيعها على القطاع الصحي.\n
* صنع الكمامات الواقية إذ تم توزيع 8 آلاف كمامة\n
* خياطة البدلات الخاصة بالأطباء وتم توزيع 700 بدلة.\n
* صنع واقي الوجه وتوزيعه للقطاع الصحي وتم توزيع 500 قناع\n
* صنع المكملات الطبيعية وتوزيعها على مرضى\n
* صنع 4 صناديق لحماية الطبيب عند إدخال جهاز التنفس.\n
* السعي لصناعة جهاز تنفس محلي بالتعاون مع مجموعة we algerians
\n* اطلاق خدمة توصيل المسلتزمات لمرضى الكوفيد19 ممن حُجروا منزليا، وتم تكفل ب 20 عائلة لحد الآن</string>
    <string name="nokhba_desc3">نخبة حاسي مسعود تم تاسيسها لغرض واحد بحت وهو ان نجمع النخبة من اجل محاربة الوباء، وهته المجموعة التي ستكون منبر لتبادل الافكار النيرة والعلمية من اجل حاسي مسعود،  فالمجموعة ليست لها اي طابع جمعوي ولا مؤسسي ولا تنتمي لاي جهة كانت فهي مستقلة وستظل مستقلة.</string>
    <!--*******************************Notification************************************-->
    <string name="channal_id">to_panel</string>
    <string name="channal_dsc">demande service</string>
    <string name="channal_nom">demande service Notification</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="nokhba_website">Nokhba Website</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>