<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="register.HelpScreen">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/white"
        android:elevation="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center|left"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:background="?attr/selectableItemBackground"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_black"
            android:text="@string/helpScreen"
            android:textSize="16sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_light"
                android:padding="10dp"
                android:text="@string/help5"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical"
                android:padding="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|right"
                    android:hint="@string/fname"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_baseline_person_24"
                    app:startIconTint="@color/green">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lname"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_baseline_person_24"
                    app:startIconTint="@color/green">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_baseline_local_phone_24"
                    app:startIconTint="@color/green">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:fontFamily="@font/cairo_black"
                    android:padding="10dp"
                    android:text="@string/sick"
                    android:textSize="12sp" />

                <co.ceryle.radiorealbutton.RadioRealButtonGroup
                    android:id="@+id/covid_you"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:rrbg_animateDrawables_enter="overshoot"
                    app:rrbg_animateTexts_enter="overshoot"
                    app:rrbg_dividerColor="@color/black"
                    app:rrbg_dividerSize="1dp"
                    app:rrbg_radius="10dp"
                    app:rrbg_selectorColor="@color/green"
                    app:rrbg_selectorSize="6dp">

                    <co.ceryle.radiorealbutton.RadioRealButton
                        android:id="@+id/c_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:rrb_ripple="true"
                        app:rrb_rippleColor="@color/black"
                        app:rrb_text="@string/yes"
                        app:rrb_textColor="@color/black"
                        android:clipChildren="false"
                        />

                    <co.ceryle.radiorealbutton.RadioRealButton
                        android:id="@+id/c_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:rrb_checked="true"
                        app:rrb_ripple="true"
                        app:rrb_rippleColor="@color/black"
                        app:rrb_text="@string/no"
                        app:rrb_textColor="@color/black" />
                </co.ceryle.radiorealbutton.RadioRealButtonGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:fontFamily="@font/cairo_black"
                    android:padding="10dp"
                    android:text="@string/sick2"
                    android:textSize="12sp" />

                <co.ceryle.radiorealbutton.RadioRealButtonGroup
                    android:id="@+id/covid_family"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:rrbg_animateDrawables_enter="overshoot"
                    app:rrbg_animateTexts_enter="overshoot"
                    app:rrbg_dividerColor="@color/black"
                    app:rrbg_dividerSize="1dp"
                    app:rrbg_radius="10dp"
                    app:rrbg_selectorColor="@color/green"
                    app:rrbg_selectorSize="6dp">

                    <co.ceryle.radiorealbutton.RadioRealButton
                        android:id="@+id/f_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:rrb_ripple="true"
                        app:rrb_rippleColor="@color/black"
                        app:rrb_text="@string/yes"
                        app:rrb_textColor="@color/black" />

                    <co.ceryle.radiorealbutton.RadioRealButton
                        android:id="@+id/f_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:rrb_checked="true"
                        app:rrb_ripple="true"
                        app:rrb_rippleColor="@color/black"
                        app:rrb_text="@string/no"
                        app:rrb_textColor="@color/black" />
                </co.ceryle.radiorealbutton.RadioRealButtonGroup>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/countsick"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    android:layout_marginTop="5dp"
                    app:startIconDrawable="@drawable/ic_baseline_plus_one_24"
                    app:startIconTint="@color/green">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/covid_num"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dropdown_menu_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/type"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp">

                    <AutoCompleteTextView
                        android:id="@+id/dropdown_menu_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_baseline_short_text_24"
                    app:startIconTint="@color/green">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/desc_help"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right"
                        android:hint="اكتب احتياجك هنا"
                        android:inputType="textMultiLine"
                        android:scrollbars="vertical"
                        android:verticalScrollbarPosition="left"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/round_layout_gris"
                    android:text="@string/send"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/cairo_black"
                    android:drawableEnd="@drawable/ic_baseline_send_24"
                    android:drawableRight="@drawable/ic_baseline_send_24"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>